<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F4A45"
    tools:context=".SignUpPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25sp"
        android:padding="25sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/PictureDescription"
            android:paddingBottom="50sp"
            android:src="@drawable/ic_logo_00" />

        <TextView
            android:id="@+id/NameDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/NameDisplay" />

        <TextView
            android:id="@+id/addressDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addressDisplay"
            android:textColor="#FFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/ProfileChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25sp"
                android:backgroundTint="#ED7D31"
                android:text="@string/ProfileChage" />

            <Button
                android:id="@+id/ChangeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25sp"
                android:backgroundTint="#ED7D31"
                android:text="@string/ChangeAddress" />

            <Button
                android:id="@+id/backbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25sp"
                android:backgroundTint="#6C5F5B"
                android:text="@string/backbutton" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>