<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F4A45"
    tools:context=".ProfileChangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity = "center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/PreviewImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_00" />

        <TextView
            android:id="@+id/promptInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:padding="15sp"
            android:text="@string/promptInput" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10sp"
            android:inputType="text"
            android:hint="@string/editName"/>

        <LinearLayout
            android:id="@+id/row1_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:src="@drawable/ic_logo_01" />

            <ImageView
                android:id="@+id/Choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:src="@drawable/ic_logo_02" />

            <ImageView
                android:id="@+id/Choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:src="@drawable/ic_logo_03" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Choice4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:src="@drawable/ic_logo_04" />

            <ImageView
                android:id="@+id/Choice5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:src="@drawable/ic_logo_05" />

            <ImageView
                android:id="@+id/Choice6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:src="@drawable/ic_logo_00" />

        </LinearLayout>

        <Button
            android:id="@+id/backToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:backgroundTint="#ED7D31"
            android:text="@string/back" />

    </LinearLayout>

</RelativeLayout>